test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_24.k
schema Parent(Son):
    name: str
    
schema Son(Parent):
    name: str
